# auto_censor_proxy

./: .gitignore  Cargo.toml  Dockerfile.censor-proxy  Dockerfile.mitm-proxy  README.md  docker-compose.yml  proxy.py  requirements.txt
model/: Dockerfile  app.py
src/: main.rs  moderator.rs
