[package]
name = "beta_bloquer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["multipart", "json"] }
serde = { version = "1.0", features = ["derive"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["limit"] }
image = "0.25"
imageproc = "0.26.1"
ab_glyph = "0.2"
